<resources>

    <string name="app_name">DAO Player</string>
    <string name="pref_generalsettings_title">General Settings</string>
    <string name="pref_developmentsettings_title">Development Settings</string>
    <string name="pref_debugsettings_title">Debug Settings</string>
    <string name="pref_runservice_title">Run audio service</string>
    <string name="pref_showgui_title">Mock GPS input</string>
    <string name="pref_showlogs_title">Show Logs</string>
    <string name="pref_showstatus_title">Show Status</string>
    <string name="pref_usegps_title">Use GPS for position</string>
    <string name="pref_reload_title">Reload composition</string>
    <string name="pref_showsceneselect_title">Show Scene Selector</string>
    <string name="pref_defaultscene_title">Load Default Scene</string>
    <string name="pref_nextscene_title">Load Next Scene</string>
    <string name="pref_prevscene_title">Load Previous Scene</string>
    <string name="pref_updatescene_title">Update Current Scene</string>
    <string name="pref_runtest_title">Run Test</string>
    <string name="pref_enablespeech_title">Enable Text-to-Speech</string>
    <string name="pref_filename_title">Composition file to load</string>
    <string name="pref_pickfile_title">Select composition file...</string>
    <string name="notification_title">DAO Player</string>
    <string name="notification_description">Audio service is running</string>
    <string name="zip_handler_name">Unzip to DAOPlayer</string>
    <string name="zip_prompt">Update DAOPlayer file cache and composition with contents of zip file?</string>
    <string name="zip_button_replace">Replace</string>
    <string name="zip_button_reload">Reload composition</string>
    <string name="zip_log_title">Diagnostic output</string>
    <string name="webui_default_url">file:///android_asset/index.html</string>
    <string name="logs_title">DAO Composition Logs</string>
    <string name="status_title">DAO Status</string>
    <string name="sceneselect_title">DAO Scene Selector</string>
    <string name="pref_clearlogs_title">Clear logs</string>
    <string name="toast_speech_failed">Sorry, text-to-speech is not available</string>
    <string name="toast_speech_language_failed">Sorry, text-to-speech language is not available</string>
    <string name="toast_speech_ready">Text-to-speech is now running</string>
</resources>
