<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="pref_runservice"
        android:title="@string/pref_runservice_title" />
    
    <Preference 
        android:title="@string/pref_showgui_title">
        <intent
            android:targetPackage="org.opensharingtoolkit.daoplayer"
            android:targetClass="org.opensharingtoolkit.daoplayer.ui.BrowserActivity" />
    </Preference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="pref_usegps"
        android:title="@string/pref_usegps_title" />
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="pref_enablespeech"
        android:title="@string/pref_enablespeech_title" />
    
    <Preference 
        android:title="@string/pref_showlogs_title">
        <intent
            android:targetPackage="org.opensharingtoolkit.daoplayer"
            android:targetClass="org.opensharingtoolkit.daoplayer.ui.LogsActivity" />
    </Preference>

    <Preference 
        android:title="@string/pref_showstatus_title">
        <intent
            android:targetPackage="org.opensharingtoolkit.daoplayer"
            android:targetClass="org.opensharingtoolkit.daoplayer.ui.StatusActivity" />
    </Preference>

    <Preference 
        android:title="@string/pref_clearlogs_title" 
        android:key="pref_clearlogs" />

    
    <Preference 
        android:title="@string/pref_reload_title" 
        android:key="pref_reload" />

    <Preference 
        android:title="@string/pref_defaultscene_title" 
        android:key="pref_defaultscene" />
    
    <Preference 
        android:title="@string/pref_nextscene_title" 
        android:key="pref_nextscene" />
    
    <Preference 
        android:title="@string/pref_prevscene_title" 
        android:key="pref_prevscene" />
    
    <Preference 
        android:title="@string/pref_runtest_title"
        android:key="pref_runtest" />

</PreferenceScreen>
